fixed navbar jumping on scroll. added tweaks to a cleaner css look.

--- a/src/UI/Buttons/ButtonHoverExpand/ButtonHoverExpand.module.css
+++ b/src/UI/Buttons/ButtonHoverExpand/ButtonHoverExpand.module.css
@@ -1,5 +1,5 @@
 .ButtonHoverExpand {
-  transition: all 0.2s ease-in-out;
+  transition: all 0.1s ease-in-out;
 }
 
 .ButtonHoverExpand:hover {
