--- a/src/components/Projects/ProjectModalContent/ProjectModalContent.module.css
+++ b/src/components/Projects/ProjectModalContent/ProjectModalContent.module.css
@@ -31,7 +31,7 @@
     #ff3706
   );
   background-size: 600% 100%;
-  animation: gradient 8s linear infinite;
+  animation: gradient 7s linear infinite;
   animation-direction: alternate;
 }
 
@@ -57,5 +57,11 @@
 
 .ProjectLinks a {
   text-decoration: none;
-  padding: 15px;
+  padding: 0 15px 0 15px;
+  display: inline-block;
+  transition: all 0.1s ease-in-out;
+}
+
+.ProjectLinks a:hover {
+  transform: scale(1.25);
 }
